--- a/Ejemplo.ipynb
+++ b/Ejemplo.ipynb
@@ -223,7 +223,7 @@
     "# Combinar las columnas \"DD/MM/AAAA\" con \"HH:MM\" y convertirla a variable de tiempo\n",
     "# Se crea una nueva columna \"Fecha\" al final con formato de tiempo.\n",
     "# Eliminamos las dos primeras columnas que ya no necesitaremos\n",
-    "df['FECHA'] = pd.to_datetime(df.apply(lambda x: x['DD/MM/AAAA'] + ' ' + x['HH:MM'], 1))\n",
+    "df['FECHA'] = pd.to_datetime(df.apply(lambda x: x['DD/MM/AAAA'] + ' ' + x['HH:MM'], 1), dayfirst=True)\n",
     "df = df.drop(['DD/MM/AAAA', 'HH:MM'], 1)"
    ]
   },
