--- a/Actividad3.ipynb
+++ b/Actividad3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPz0ZpZzbuSY68LSLAI2t9u",
+      "authorship_tag": "ABX9TyMBxVtSqjpsE4OEl6Q0Iz0Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2592,16 +2592,92 @@
       },
       "source": [
         "import pandas as pd\n",
-        "#url = \"https://github.com/carloslizarragac/FisicaComputacional1/blob/master/Actividad1/Guaymas26292.txt\"\n",
-        "url=\"Guaymas26292.txt\"\n",
-        "https://github.com/carloslizarragac/FisicaComputacional1/blob/master/Actividad1/Guaymas26292.txt\n",
-        "my_cols = [\"Fecha\", \"Precip\", \"Evap\", \"Tmax\", \"Tmin\"]\n",
-        "#df_dist = pd.read_csv(\"Guaymas26292.txt\", names=my_cols, sep='\\s+ | :', header=None, skiprows=19, skipfooter=2, engine='python')\n",
-        "df_dist = pd.read_csv(url, names=my_cols, sep='\\s+ | :', header=None, skiprows=19, skipfooter=2, engine='python')\n",
-        "#lineterminator='\\r'"
+        "import numpy as np\n",
+        "\n",
+        "# Tomar la dirección URL del archivo en formato 'raw'\n",
+        "url = 'https://raw.githubusercontent.com/carloslizarragac/FisicaComputacional1/master/Actividad1/Guaymas26292.txt'\n",
+        "\n",
+        "# Definimos los nombres de las columnas\n",
+        "# El archivo tiene códigos ASCII extendido (Español), encoding='cp1251' Windows (Europa Occidental)\n",
+        "# El separador de datos es de uno o más espacios, sep='\\s+'\n",
+        "# Se brincará los primeros 19 renglones y el último, afirmamos que no nay encabezado\n",
+        "# Se procesan los datos utilizando Python, engine='python' \n",
+        "my_cols = ['Fecha', 'Precip', 'Evap', 'Tmax', 'Tmin']\n",
+        "df_dist = pd.read_csv(url, names=my_cols, encoding='cp1251', sep='\\s+', header=None, skiprows=19, skipfooter=1, engine='python')\n"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dARaSv3II_f-",
+        "outputId": "99c26e63-0863-47e4-94a8-9eadd030ed7a"
+      },
+      "source": [
+        "# Revisamos el encabezado y el final del dataframe\n",
+        "print(df_dist.head())\n",
+        "print(df_dist.tail())"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "        Fecha Precip  Evap Tmax Tmin\n",
+            "0  01/02/1967      0  Nulo   20    8\n",
+            "1  02/02/1967      0  Nulo   21    9\n",
+            "2  03/02/1967      0  Nulo   26    8\n",
+            "3  04/02/1967      0  Nulo   25    7\n",
+            "4  05/02/1967      0  Nulo   23    7\n",
+            "            Fecha Precip  Evap Tmax Tmin\n",
+            "17874  26/09/2016      0  Nulo   37   20\n",
+            "17875  27/09/2016      0  Nulo   37   20\n",
+            "17876  28/09/2016      0  Nulo   38   20\n",
+            "17877  29/09/2016      0  Nulo   37   24\n",
+            "17878  30/09/2016      0  Nulo   37   21\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RMy_c62kQR9o",
+        "outputId": "1be886c4-fa02-4b55-de19-2830150a8f34"
+      },
+      "source": [
+        "# Información del dataframe\n",
+        "df_dist.info()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17879 entries, 0 to 17878\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column  Non-Null Count  Dtype \n",
+            "---  ------  --------------  ----- \n",
+            " 0   Fecha   17879 non-null  object\n",
+            " 1   Precip  17879 non-null  object\n",
+            " 2   Evap    17879 non-null  object\n",
+            " 3   Tmax    17879 non-null  object\n",
+            " 4   Tmin    17879 non-null  object\n",
+            "dtypes: object(5)\n",
+            "memory usage: 698.5+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2610,13 +2686,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 208
         },
-        "id": "dARaSv3II_f-",
-        "outputId": "816bd468-190d-4811-c58c-2ecf3bc61061"
+        "id": "0oUS1DREaHZz",
+        "outputId": "4cf4a949-691a-4a64-d296-2a2941ba9509"
       },
       "source": [
-        "df_dist.head()"
+        "# Hacemos una copia de trabajo y preservamos el dataframe original\n",
+        "df_work0 = df_dist.copy()\n",
+        "df_work0.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2704,14 +2782,272 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 16
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RMy_c62kQR9o"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 208
+        },
+        "id": "TJei9aqNbA_J",
+        "outputId": "296f6cac-3f8e-4823-cbb9-d40952200a7c"
+      },
+      "source": [
+        "# Reemplazamos los textos 'Nulo' por espacio en blanco ''\n",
+        "str_Nulo = 'Nulo'\n",
+        "df_work1 = df_work0.replace(to_replace=str_Nulo, value='', regex=True)\n",
+        "df_work1.head()\n"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Fecha</th>\n",
+              "      <th>Precip</th>\n",
+              "      <th>Evap</th>\n",
+              "      <th>Tmax</th>\n",
+              "      <th>Tmin</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>01/02/1967</td>\n",
+              "      <td>0</td>\n",
+              "      <td></td>\n",
+              "      <td>20</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>02/02/1967</td>\n",
+              "      <td>0</td>\n",
+              "      <td></td>\n",
+              "      <td>21</td>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>03/02/1967</td>\n",
+              "      <td>0</td>\n",
+              "      <td></td>\n",
+              "      <td>26</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>04/02/1967</td>\n",
+              "      <td>0</td>\n",
+              "      <td></td>\n",
+              "      <td>25</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>05/02/1967</td>\n",
+              "      <td>0</td>\n",
+              "      <td></td>\n",
+              "      <td>23</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        Fecha Precip Evap Tmax Tmin\n",
+              "0  01/02/1967      0        20    8\n",
+              "1  02/02/1967      0        21    9\n",
+              "2  03/02/1967      0        26    8\n",
+              "3  04/02/1967      0        25    7\n",
+              "4  05/02/1967      0        23    7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_C-Zc0jjeps6",
+        "outputId": "7e8009ff-4dec-404f-f680-a501f86b5b2c"
+      },
+      "source": [
+        "# Imprimimos la información actualizada del dataframe\n",
+        "df_work1.info()\n",
+        "print(df_work1.head())"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17879 entries, 0 to 17878\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column  Non-Null Count  Dtype \n",
+            "---  ------  --------------  ----- \n",
+            " 0   Fecha   17879 non-null  object\n",
+            " 1   Precip  17879 non-null  object\n",
+            " 2   Evap    17879 non-null  object\n",
+            " 3   Tmax    17879 non-null  object\n",
+            " 4   Tmin    17879 non-null  object\n",
+            "dtypes: object(5)\n",
+            "memory usage: 698.5+ KB\n",
+            "        Fecha Precip Evap Tmax Tmin\n",
+            "0  01/02/1967      0        20    8\n",
+            "1  02/02/1967      0        21    9\n",
+            "2  03/02/1967      0        26    8\n",
+            "3  04/02/1967      0        25    7\n",
+            "4  05/02/1967      0        23    7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hk9nFPRxeubC",
+        "outputId": "274d782f-706f-4d1d-d24d-02125bf22b4b"
+      },
+      "source": [
+        "# Deseamos convertir los valores de las variables ambientales a núm. flotantes \n",
+        "cols_list = ['Precip', 'Evap', 'Tmax', 'Tmin']\n",
+        "for cols in cols_list:\n",
+        "  df_work1[cols] = pd.to_numeric(df_work1[cols], errors='coerce')\n",
+        "\n",
+        "df_work1.info()\n",
+        "\n"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17879 entries, 0 to 17878\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   Fecha   17879 non-null  object \n",
+            " 1   Precip  17847 non-null  float64\n",
+            " 2   Evap    5731 non-null   float64\n",
+            " 3   Tmax    17823 non-null  float64\n",
+            " 4   Tmin    17828 non-null  float64\n",
+            "dtypes: float64(4), object(1)\n",
+            "memory usage: 698.5+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1v8VbfJnfkXt",
+        "outputId": "57932cbe-9626-4155-8b45-cc10afe4674d"
+      },
+      "source": [
+        "# De la instrucción anterior, vemos que hay valores faltantes. Sumamos los valores nulos. \n",
+        "df_work1.isnull().sum()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Fecha         0\n",
+              "Precip       32\n",
+              "Evap      12148\n",
+              "Tmax         56\n",
+              "Tmin         51\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d0jP4mJahUpy",
+        "outputId": "79d97030-f301-4626-d901-404b66bbea2a"
+      },
+      "source": [
+        "df.info()"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17878 entries, 0 to 17877\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column  Non-Null Count  Dtype \n",
+            "---  ------  --------------  ----- \n",
+            " 0   Fecha   17878 non-null  object\n",
+            " 1   Precip  17878 non-null  object\n",
+            " 2   Evap    17878 non-null  object\n",
+            " 3   Tmax    17878 non-null  object\n",
+            " 4   Tmin    17845 non-null  object\n",
+            "dtypes: object(5)\n",
+            "memory usage: 698.5+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TThKCDldi6pB"
       },
       "source": [
         ""
