--- a/Actividad3.ipynb
+++ b/Actividad3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdCkmXm9sS5ul5eERiO0Tt",
+      "authorship_tag": "ABX9TyNq6CGgkAW5NDBUr0SVuP36",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
           "height": 176
         },
         "id": "k5_qyPeHHcyf",
-        "outputId": "b5711877-0530-499f-f28f-0c31b76f291a"
+        "outputId": "c5dae6ef-defb-4edf-cc68-4190ca4a618a"
       },
       "source": [
         "# Creamos el DataFrame compra a partir de un diccionario de datos\n",
@@ -77,7 +77,7 @@
         "df_compras = pd.DataFrame(data)\n",
         "df_compras"
       ],
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 79
         }
       ]
     },
@@ -162,7 +162,7 @@
           "height": 176
         },
         "id": "jVZQcVXeH9gf",
-        "outputId": "e4fee724-ff85-498a-dadb-3f3737babfe1"
+        "outputId": "8aacc085-f9ce-422b-94a8-6e921f7272eb"
       },
       "source": [
         "# Añadimos la lista de personas que compran fruta \n",
@@ -170,7 +170,7 @@
         "df_compras = pd.DataFrame(data, index=clientes)\n",
         "df_compras \n"
       ],
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,7 +234,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 80
         }
       ]
     },
@@ -245,13 +245,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NbByACwKJVOj",
-        "outputId": "34e5fbf8-cd17-47e5-f0a3-d233a166e8ba"
+        "outputId": "16984e36-33de-423c-c4fe-b49f1aa577f2"
       },
       "source": [
         "# Podemos ver que compró Ana (selección del renglón con .loc)\n",
         "df_compras.loc['Ana']"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,13 +259,43 @@
             "text/plain": [
               "manzanas    3\n",
               "naranjas    0\n",
-              "Name: Ana, dtype: int64"
+              "Name: Ana, dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vXTyFnOM4F61",
+        "outputId": "7e8736e1-c7f0-4e0b-8758-e0f66ebd5b8f"
+      },
+      "source": [
+        "df_compras.iloc[0]"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "manzanas    3\n",
+              "naranjas    0\n",
+              "Name: Ana, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
         }
       ]
     },
@@ -2767,7 +2797,7 @@
         "my_cols = ['Fecha', 'Precip', 'Evap', 'Tmax', 'Tmin']\n",
         "df_dist = pd.read_csv(url, names=my_cols, encoding='cp1251', sep='\\s+', header=None, skiprows=19, skipfooter=1, engine='python')\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2777,14 +2807,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dARaSv3II_f-",
-        "outputId": "99c26e63-0863-47e4-94a8-9eadd030ed7a"
+        "outputId": "8f552d8a-7e6b-45ff-9abc-3c662d3a485a"
       },
       "source": [
         "# Revisamos el encabezado y el final del dataframe\n",
-        "print(df_dist.head())\n",
-        "print(df_dist.tail())"
+        "print(df_dist.head(3))\n",
+        "print(df_dist.tail())\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2793,8 +2823,6 @@
             "0  01/02/1967      0  Nulo   20    8\n",
             "1  02/02/1967      0  Nulo   21    9\n",
             "2  03/02/1967      0  Nulo   26    8\n",
-            "3  04/02/1967      0  Nulo   25    7\n",
-            "4  05/02/1967      0  Nulo   23    7\n",
             "            Fecha Precip  Evap Tmax Tmin\n",
             "17874  26/09/2016      0  Nulo   37   20\n",
             "17875  27/09/2016      0  Nulo   37   20\n",
@@ -2813,13 +2841,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K29qAMbEWOR5",
-        "outputId": "d02509ab-20a8-4212-e2d5-5494626f82b0"
+        "outputId": "2b82951e-76eb-43e8-f31b-a243159b29ac"
       },
       "source": [
         "# Investigamos su tamaño con la función shape (renglones, columnas)\n",
         "df_dist.shape"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2831,7 +2859,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 7
         }
       ]
     },
@@ -2842,13 +2870,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RMy_c62kQR9o",
-        "outputId": "1be886c4-fa02-4b55-de19-2830150a8f34"
+        "outputId": "3bf8ed59-8c7f-47c4-c1d9-0e5af112dd8b"
       },
       "source": [
         "# Información del dataframe\n",
         "df_dist.info()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2878,14 +2906,14 @@
           "height": 208
         },
         "id": "0oUS1DREaHZz",
-        "outputId": "4cf4a949-691a-4a64-d296-2a2941ba9509"
+        "outputId": "64988a64-cd2d-451f-ddd1-02ccd4dd8293"
       },
       "source": [
         "# Hacemos una copia de trabajo y preservamos el dataframe original\n",
         "df_work0 = df_dist.copy()\n",
         "df_work0.head()"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2973,7 +3001,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 31
         }
       ]
     },
@@ -2985,7 +3013,7 @@
           "height": 208
         },
         "id": "TJei9aqNbA_J",
-        "outputId": "296f6cac-3f8e-4823-cbb9-d40952200a7c"
+        "outputId": "134e3750-1ec2-4bd1-defd-5e371c73e4b2"
       },
       "source": [
         "# Reemplazamos los textos 'Nulo' por espacio en blanco ''\n",
@@ -2993,7 +3021,7 @@
         "df_work1 = df_work0.replace(to_replace=str_Nulo, value='', regex=True)\n",
         "df_work1.head()\n"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3081,7 +3109,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 32
         }
       ]
     },
@@ -3092,14 +3120,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_C-Zc0jjeps6",
-        "outputId": "7e8009ff-4dec-404f-f680-a501f86b5b2c"
+        "outputId": "47c1b8f4-8d80-4521-9273-58a01e0935d4"
       },
       "source": [
         "# Imprimimos la información actualizada del dataframe\n",
         "df_work1.info()\n",
-        "print(df_work1.head())"
+        "print(df_work1.head())\n"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -3128,13 +3156,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c3tUcyso34nS"
+      },
+      "source": [
+        "**Convirtiendo objetos a números flotantes.** \n",
+        "\n",
+        "Primero atenderemos las columnas de datos que son reales o flotantes (Precipitación, Evaporación, Temperatura Máxima y la Mínima).\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hk9nFPRxeubC",
-        "outputId": "274d782f-706f-4d1d-d24d-02125bf22b4b"
+        "outputId": "f123519c-dd72-4a4e-ef8d-eba9f4b1d4ae"
       },
       "source": [
         "# Deseamos convertir los valores de las variables ambientales a núm. flotantes \n",
@@ -3142,10 +3181,9 @@
         "for cols in cols_list:\n",
         "  df_work1[cols] = pd.to_numeric(df_work1[cols], errors='coerce')\n",
         "\n",
-        "df_work1.info()\n",
-        "\n"
+        "df_work1.info()\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -3174,13 +3212,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1v8VbfJnfkXt",
-        "outputId": "57932cbe-9626-4155-8b45-cc10afe4674d"
+        "outputId": "f25ad99f-db0f-4fa7-e901-aa21a7c93272"
       },
       "source": [
         "# De la instrucción anterior, vemos que hay valores faltantes. Sumamos los valores nulos. \n",
-        "df_work1.isnull().sum()"
+        "df_work1.isnull().sum()\n"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3197,7 +3235,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 35
         }
       ]
     },
@@ -3208,13 +3246,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0jP4mJahUpy",
-        "outputId": "51a055e5-cbc2-4a5e-c6f2-6229d3d7cc6f"
+        "outputId": "cc6a2e2b-024c-445e-9681-f14402de4915"
       },
       "source": [
         "print(df_work1.head())\n",
-        "print(df_work1.head())"
+        "print(df_work1.head())\n"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -3244,13 +3282,13 @@
           "height": 303
         },
         "id": "TThKCDldi6pB",
-        "outputId": "e04ea146-6036-4c30-ee37-609fb9beb282"
+        "outputId": "d8efbb3e-3798-418c-933e-9b42f99d9e10"
       },
       "source": [
         "# Un análisis estadístico breve de las variables numéricas redondeado a 2 cifras significativas\n",
-        "df_work1.describe().round(2)"
+        "df_work1.describe().round(2)\n"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3356,14 +3394,217 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZSLW2GH24bTk"
+      },
+      "source": [
+        "**Ahora trabajaremos la variable Fecha.**\n",
+        "\n",
+        "Una variable tipo fecha, contiene mucha información condensada (Año, Mes, Día, Hora, Minuto, Segundo y fracciones de Segundo). Buscamos acceder a toda esa información para utilizarla. \n",
+        "\n",
+        "Python tiene algunas herramientas para trabajar las fechas. Veamos algunas de ellas. \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O9rnncq2WEKk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9f1653a-c24a-4edd-802d-15f797ddcd89"
+      },
+      "source": [
+        "# Volvemos a hacer una pausa y definimos un nuevo dataframe por si hay que regresarse.\n",
+        "df_work2 = df_work1.copy()\n",
+        "df_work2['Fecha'].head()\n"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    01/02/1967\n",
+              "1    02/02/1967\n",
+              "2    03/02/1967\n",
+              "3    04/02/1967\n",
+              "4    05/02/1967\n",
+              "Name: Fecha, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O9rnncq2WEKk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rMfV53Yu5O-V",
+        "outputId": "7199cdb4-602d-4aaf-a7d8-cc0fba9067e7"
+      },
+      "source": [
+        "# Pandas tiene la función pd.to_datetime que convierte una cadena en tipo datetime64[ns]\n",
+        "# Intentamos a ver si Python reconoce el formato en nuestro caso. \n",
+        "# Agregamos la opción de que el primer dato es el día (dayfirst=True)\n",
+        "df_work2['Fecha']=pd.to_datetime(df_work2['Fecha'], dayfirst=True).copy()\n",
+        "print(df_work1.head())"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "        Fecha  Precip  Evap  Tmax  Tmin\n",
+            "0  01/02/1967     0.0   NaN  20.0   8.0\n",
+            "1  02/02/1967     0.0   NaN  21.0   9.0\n",
+            "2  03/02/1967     0.0   NaN  26.0   8.0\n",
+            "3  04/02/1967     0.0   NaN  25.0   7.0\n",
+            "4  05/02/1967     0.0   NaN  23.0   7.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "henFdS6k6Fh7",
+        "outputId": "3546c952-1d65-42b2-820c-e2d31c70a2be"
+      },
+      "source": [
+        "# Verificamos que cada variable (columna), sea del tipo que esperamos.\n",
+        "# Observamos que la variable Fecha es de tipo 'datetime64[ns]'  \n",
+        "df_work2.dtypes"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Fecha     datetime64[ns]\n",
+              "Precip           float64\n",
+              "Evap             float64\n",
+              "Tmax             float64\n",
+              "Tmin             float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y3ZUaDhV6UbR"
+      },
+      "source": [
+        "# Buscamos ahora añadir dos columnas adicionales: df['Año'], df['Mes']\n",
+        "# Usaremos la función .dt.year y .dt.month para extraer el Año y Mes de la Fecha\n",
+        "df_work2['Año'] = df_work2['Fecha'].dt.year\n",
+        "df_work2['Mes'] = df_work2['Fecha'].dt.month\n"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xWd4GEwBJRE0",
+        "outputId": "0104522b-0700-4af9-99da-ca3c298194ef"
+      },
+      "source": [
+        "# Verificamos que se hayan creado de forma correcta\n",
+        "# Tendremos ahora dos columnas adicionales que podemos utilizar para filtrar información.\n",
+        "print(df_work2.head())\n",
+        "print(df_work2.tail())\n"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "       Fecha  Precip  Evap  Tmax  Tmin   Año  Mes\n",
+            "0 1967-02-01     0.0   NaN  20.0   8.0  1967    2\n",
+            "1 1967-02-02     0.0   NaN  21.0   9.0  1967    2\n",
+            "2 1967-02-03     0.0   NaN  26.0   8.0  1967    2\n",
+            "3 1967-02-04     0.0   NaN  25.0   7.0  1967    2\n",
+            "4 1967-02-05     0.0   NaN  23.0   7.0  1967    2\n",
+            "           Fecha  Precip  Evap  Tmax  Tmin   Año  Mes\n",
+            "17874 2016-09-26     0.0   NaN  37.0  20.0  2016    9\n",
+            "17875 2016-09-27     0.0   NaN  37.0  20.0  2016    9\n",
+            "17876 2016-09-28     0.0   NaN  38.0  20.0  2016    9\n",
+            "17877 2016-09-29     0.0   NaN  37.0  24.0  2016    9\n",
+            "17878 2016-09-30     0.0   NaN  37.0  21.0  2016    9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eHArD7nbJnMJ",
+        "outputId": "ab82f6a9-1b84-40d8-c04a-12894122dca0"
+      },
+      "source": [
+        "# Hasta aquí llegaremos esta semana. \n",
+        "df_work2.info()"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 17879 entries, 0 to 17878\n",
+            "Data columns (total 7 columns):\n",
+            " #   Column  Non-Null Count  Dtype         \n",
+            "---  ------  --------------  -----         \n",
+            " 0   Fecha   17879 non-null  datetime64[ns]\n",
+            " 1   Precip  17847 non-null  float64       \n",
+            " 2   Evap    5731 non-null   float64       \n",
+            " 3   Tmax    17823 non-null  float64       \n",
+            " 4   Tmin    17828 non-null  float64       \n",
+            " 5   Año     17879 non-null  int64         \n",
+            " 6   Mes     17879 non-null  int64         \n",
+            "dtypes: datetime64[ns](1), float64(4), int64(2)\n",
+            "memory usage: 977.9 KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZtFHyHADJ2b1"
       },
       "source": [
         ""
