--- a/Actividad3.ipynb
+++ b/Actividad3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNq6CGgkAW5NDBUr0SVuP36",
+      "authorship_tag": "ABX9TyMJjpSNXFbjhY55AJOBqfku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3574,6 +3574,7 @@
         "outputId": "ab82f6a9-1b84-40d8-c04a-12894122dca0"
       },
       "source": [
+        "# Verificamos que Año y Mes son variables enteras.\n",
         "# Hasta aquí llegaremos esta semana. \n",
         "df_work2.info()"
       ],
