--- a/Actividad3.ipynb
+++ b/Actividad3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJjpSNXFbjhY55AJOBqfku",
+      "authorship_tag": "ABX9TyNWw6r+Za1wZ4IuYHuiszTO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "source": [
         "# Importamos las bibliotecas a utilizar\n",
         "import pandas as pd\n",
-        "import numpy as np\n"
+        "import numpy as np"
       ],
       "execution_count": null,
       "outputs": []
@@ -77,7 +77,7 @@
         "df_compras = pd.DataFrame(data)\n",
         "df_compras"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
         "df_compras = pd.DataFrame(data, index=clientes)\n",
         "df_compras \n"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +251,7 @@
         "# Podemos ver que compró Ana (selección del renglón con .loc)\n",
         "df_compras.loc['Ana']"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,7 @@
       "source": [
         "df_compras.iloc[0]"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -992,7 +992,7 @@
         "from numpy.random import randn\n",
         "df = pd.DataFrame(randn(6,4),index='0 1 2 3 4 5'.split(),columns='A B C D'.split())\n"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1459,7 +1459,7 @@
         "# Imprimimos de forma directa dos columnas\n",
         "df[['A','B']]"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1553,7 +1553,7 @@
         "# India donde se cumple la condición\n",
         "df>0.5"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,7 +1660,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1919,7 +1919,7 @@
         "                  'C':[5,3,6,5,7,2,8,5],\n",
         "                  'D':[1,2,3,np.nan,5,np.nan,7,8]})\n"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1935,7 +1935,7 @@
       "source": [
         "df2"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2233,7 +2233,7 @@
         "df3=df2.fillna(value=0)\n",
         "df3"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2797,7 +2797,7 @@
         "my_cols = ['Fecha', 'Precip', 'Evap', 'Tmax', 'Tmin']\n",
         "df_dist = pd.read_csv(url, names=my_cols, encoding='cp1251', sep='\\s+', header=None, skiprows=19, skipfooter=1, engine='python')\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2814,7 +2814,7 @@
         "print(df_dist.head(3))\n",
         "print(df_dist.tail())\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2847,7 +2847,7 @@
         "# Investigamos su tamaño con la función shape (renglones, columnas)\n",
         "df_dist.shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2876,7 +2876,7 @@
         "# Información del dataframe\n",
         "df_dist.info()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2913,7 +2913,7 @@
         "df_work0 = df_dist.copy()\n",
         "df_work0.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3021,7 +3021,7 @@
         "df_work1 = df_work0.replace(to_replace=str_Nulo, value='', regex=True)\n",
         "df_work1.head()\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3127,7 +3127,7 @@
         "df_work1.info()\n",
         "print(df_work1.head())\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3183,7 +3183,7 @@
         "\n",
         "df_work1.info()\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3218,7 +3218,7 @@
         "# De la instrucción anterior, vemos que hay valores faltantes. Sumamos los valores nulos. \n",
         "df_work1.isnull().sum()\n"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3252,7 +3252,7 @@
         "print(df_work1.head())\n",
         "print(df_work1.head())\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3288,7 +3288,7 @@
         "# Un análisis estadístico breve de las variables numéricas redondeado a 2 cifras significativas\n",
         "df_work1.describe().round(2)\n"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3425,7 +3425,7 @@
         "df_work2 = df_work1.copy()\n",
         "df_work2['Fecha'].head()\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3462,7 +3462,7 @@
         "df_work2['Fecha']=pd.to_datetime(df_work2['Fecha'], dayfirst=True).copy()\n",
         "print(df_work1.head())"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3492,7 +3492,7 @@
         "# Observamos que la variable Fecha es de tipo 'datetime64[ns]'  \n",
         "df_work2.dtypes"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3524,7 +3524,7 @@
         "df_work2['Año'] = df_work2['Fecha'].dt.year\n",
         "df_work2['Mes'] = df_work2['Fecha'].dt.month\n"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3542,7 +3542,7 @@
         "print(df_work2.head())\n",
         "print(df_work2.tail())\n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3578,7 +3578,7 @@
         "# Hasta aquí llegaremos esta semana. \n",
         "df_work2.info()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
