--- a/Actividad4.ipynb
+++ b/Actividad4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2TB6CIKXv+hduMc8fCZ5/",
+      "authorship_tag": "ABX9TyM3RV14A/bakRcz+pDz93er",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,7 @@
         "id": "K8QzXoDZqwTo"
       },
       "source": [
+        "# Feb 3, 2021\n",
         "# Importamos las bibliotecas a utilizar\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -141,7 +142,7 @@
       },
       "source": [
         "### NOTA:\n",
-        "Conversión de la columna de Mes a cadena de caracteres en lugar de tener los meses denotados por enteros. "
+        "Conversión de la columna de Mes a cadena de caracteres (en este caso Variable categórica), en lugar de tener los meses denotados por enteros. Utilizaremos la función .dt.strftime('%b'), %b representa los meses en formato: Jan, Feb, Mar,..., Nov, Dec."
       ]
     },
     {
