--- a/Actividad6.ipynb
+++ b/Actividad6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUqKqL7EUfardIYKAsEsuW",
+      "authorship_tag": "ABX9TyMiqrCY7fpQnxxAg8QyWYtL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1179,7 +1179,7 @@
           "height": 868
         },
         "id": "V4rs2nL8Ss6b",
-        "outputId": "922ef2f1-0eb8-460b-ecc3-c3747b305187"
+        "outputId": "61efea8a-e0d0-4de4-928e-6b46a35aa238"
       },
       "source": [
         "# Modelo AR(p): (p,d,q) = (2,1,0) \n",
@@ -1190,7 +1190,7 @@
         "plt.title('ARIMA(2,1,0) = AR(2)')\n",
         "print(results_AR.summary())\n"
       ],
-      "execution_count": 57,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1211,7 +1211,7 @@
             "Model:                 ARIMA(2, 1, 0)   Log Likelihood                4147.267\n",
             "Method:                       css-mle   S.D. of innovations              0.036\n",
             "Date:                Tue, 16 Feb 2021   AIC                          -8286.534\n",
-            "Time:                        07:10:27   BIC                          -8263.793\n",
+            "Time:                        08:08:51   BIC                          -8263.793\n",
             "Sample:                             1   HQIC                         -8278.220\n",
             "                                                                              \n",
             "================================================================================\n",
@@ -1430,7 +1430,7 @@
         "id": "HJdMueBztuD0"
       },
       "source": [
-        "El Criterio de Información de Akaike (AIC), como indicador del mejor modelo ARIMA. \n",
+        "El [Criterio de Información de Akaike (AIC)](https://en.wikipedia.org/wiki/Akaike_information_criterion), como indicador del mejor modelo ARIMA. \n",
         "\n",
         "El criterio AIC se basa en dos principios:\n",
         "\n",
