--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/7emmloo49E9qOuvuvR2i",
+      "authorship_tag": "ABX9TyPmv91Ay32++cdeFM8d6a6f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -668,8 +668,15 @@
       "source": [
         "**Determinante de una Matrix**\n",
         "\n",
-        "Se utiliza la función [scipy.linalg.det](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.det.html#scipy.linalg.det) \n",
-        "\n",
+        "Se utiliza la función [scipy.linalg.det](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.det.html#scipy.linalg.det) \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_0EfVIfur5O_"
+      },
+      "source": [
         "Para la matriz M, \n",
         "\\begin{gather}\n",
         " M\n",
