--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMo9NkuhFLEN++Vt4E1YCjk",
+      "authorship_tag": "ABX9TyOl2pjhVvBo7FqGibiJGriD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,6 +445,7 @@
         "   \\end{bmatrix}\n",
         "\\end{gather}\n",
         " y la matrix identidad \n",
+        "\n",
         " \\begin{gather}\n",
         " I\n",
         " =\n",
@@ -453,7 +454,8 @@
         "   0 & 1\n",
         "   \\end{bmatrix}\n",
         "\\end{gather}\n",
-        "Calcule el resultado de 2*I+3*A+A@B.\n",
+        "\n",
+        "Calcule el resultado de $2*I+3*A+A@B$.\n",
         "\n",
         "Para definir la matriz identidad, se puede utilizar la función *np.eye(2, dtype=int)*. Ver manual de  [np.eye()](https://numpy.org/doc/stable/reference/generated/numpy.eye.html).\n",
         "\n",
