--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP4qowDQQuKlQ069YylU40I",
+      "authorship_tag": "ABX9TyO5zircfN+sD0BiQuOA76BU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -437,8 +437,7 @@
         "\\end{gather}\n",
         "\n",
         "\\begin{gather}\n",
-        " B\n",
-        " =\n",
+        " B =\n",
         "  \\begin{bmatrix}\n",
         "   5 & 2 \\\\\n",
         "   1 & 2\n",
@@ -447,14 +446,13 @@
         "\n",
         " y la matrix identidad \n",
         "\n",
-        " \\begin{gather}\n",
-        " I\n",
-        " =\n",
-        "  \\begin{bmatrix}\n",
+        " \\begin{equation*}\n",
+        " I = \n",
+        "   \\begin{bmatrix}\n",
         "   1 & 0 \\\\\n",
         "   0 & 1\n",
         "   \\end{bmatrix}\n",
-        "\\end{gather}\n",
+        "\\end{equation*}\n",
         "\n",
         "Calcule el resultado de $2*I+3*A+A@B$.\n",
         "\n",
