--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5zircfN+sD0BiQuOA76BU",
+      "authorship_tag": "ABX9TyMay8lv3lTYrwbIr1PCFcaB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,22 +427,22 @@
       "source": [
         "**Ejercicio 1.** Defina las siguientes matrices.\n",
         "\n",
-        "\\begin{gather}\n",
+        "\\begin{equation*}\n",
         " A\n",
         " =\n",
         "  \\begin{bmatrix}\n",
         "   1 & 3 \\\\\n",
         "   -1 & 7\n",
         "   \\end{bmatrix}\n",
-        "\\end{gather}\n",
+        "\\end{equation*}\n",
         "\n",
-        "\\begin{gather}\n",
+        "\\begin{equation*}\n",
         " B =\n",
         "  \\begin{bmatrix}\n",
         "   5 & 2 \\\\\n",
         "   1 & 2\n",
         "   \\end{bmatrix}\n",
-        "\\end{gather}\n",
+        "\\end{equation*}\n",
         "\n",
         " y la matrix identidad \n",
         "\n",
@@ -680,14 +680,14 @@
       "source": [
         "Para la matriz M, \n",
         "\n",
-        "\\begin{gather}\n",
+        "\\begin{equation*}\n",
         " M\n",
         " =\n",
         "  \\begin{bmatrix}\n",
         "   a & b \\\\\n",
         "   c & d\n",
         "   \\end{bmatrix}\n",
-        "\\end{gather}\n",
+        "\\end{equation*}\n",
         "\n",
         "det(M) = $ad-bc$\n"
       ]
@@ -733,23 +733,23 @@
         "\n",
         "Para una matriz $M$, la inversa $M^{-1}$\n",
         "\n",
-        "\\begin{gather}\n",
+        "\\begin{equation*}\n",
         " M\n",
         " =\n",
         "  \\begin{bmatrix}\n",
         "   a & b \\\\\n",
         "   c & d\n",
         "   \\end{bmatrix}\n",
-        "\\end{gather}\n",
+        "\\end{equation*}\n",
         "\n",
-        "\\begin{gather}\n",
+        "\\begin{equation*}\n",
         " M^{-1}\n",
         " = \\frac{1}{\\det(M)}\n",
         "  \\begin{bmatrix}\n",
         "   d & -b \\\\\n",
         "   -c & a\n",
         "   \\end{bmatrix}\n",
-        "\\end{gather}"
+        "\\end{equation*}"
       ]
     },
     {
