--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN0mlnfXfNRalN07AidDLU1",
+      "authorship_tag": "ABX9TyNQb6MBye2dQzPvD6Ugw5ms",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -861,22 +861,26 @@
         "a_{n,0} & a_{n,1} & \\cdots & a_{n,n} \\\\\n",
         "\\end{bmatrix}\n",
         "\\end{equation*}\n",
-        "y $x$ es un vector desconocido, $b$ un vector constante conocido. \n",
-        "\\begin{eqnarray*}\n",
-        "x & = & \\begin{bmatrix} \n",
+        "y $x$ es un vector desconocido, $b$ un vector constante conocido.\n",
+        "\n",
+        "\\begin{equation*}\n",
+        "x  =  \\begin{bmatrix} \n",
         "x_0 \\\\\n",
         "x_1 \\\\ \n",
         "\\vdots \\\\\n",
         "x_n \\\\\n",
-        "\\end{bmatrix}, \n",
-        "b & = &\n",
+        "\\end{bmatrix} \n",
+        "\\end{equation*},\n",
+        "\n",
+        "\\begin{equation*} \n",
+        "b = \n",
         "\\begin{bmatrix}\n",
         " b_0 \\\\\n",
         " b_1 \\\\\n",
         "\\vdots \\\\\n",
         " b_n \\\\\n",
         " \\end{bmatrix}\n",
-        "\\end{eqnarray*}\n",
+        "\\end{equation*}\n",
         "\n",
         "Buscamos la solución \n",
         "\\begin{equation*}\n",
