--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQb6MBye2dQzPvD6Ugw5ms",
+      "authorship_tag": "ABX9TyM4mA2aKRbybxn44bdftwQu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1397,9 +1397,9 @@
         "Resuelva el sistema de ecuaciones.\n",
         "\n",
         "\\begin{eqnarray*}\n",
-        "x - 3 y + z & = & 1 \\\\\n",
-        "3 x - 4y + z & = & 5 \\\\\n",
-        "2 y - z & = & 0 \\\\\n",
+        "x - 3 y + z & = & 1 \\\\ \\nonumber\n",
+        "3 x - 4y + z & = & 5 \\\\ \\nonumber\n",
+        "2 y - z & = & 0 \\\\ \\nonumber\n",
         "\\end{eqnarray*}\n",
         "\n",
         "utilizando el Método de Eliminación Gaussiana y la función scipy.linalg.solve()\n"
