--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4mA2aKRbybxn44bdftwQu",
+      "authorship_tag": "ABX9TyMnetMc96tPq3cRWv1mZHwu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -835,7 +835,7 @@
       "source": [
         "### Resolución de Ecuaciones Lineales. \n",
         "\n",
-        "Un sistema de ecuaciones lineales, es una colección de ecuaciones del tipo:\n",
+        "Un [sistema de ecuaciones lineales](https://en.wikipedia.org/wiki/System_of_linear_equations), es una colección de (n+1) ecuaciones de (n+1) variables de la forma:\n",
         "\n",
         "\\begin{align*}\n",
         " a_{0,0} x_0 + a_{0,1} x_1 + \\cdots + a_{0,n} x_n & = b_0 \\\\\n",
@@ -850,7 +850,7 @@
         "A x = b\n",
         "\\end{equation*}\n",
         "\n",
-        "donde A es la matriz\n",
+        "donde A es la matriz cuadrada (n+1 x n+1)\n",
         "\n",
         "\\begin{equation*}\n",
         "A = \n",
@@ -861,7 +861,8 @@
         "a_{n,0} & a_{n,1} & \\cdots & a_{n,n} \\\\\n",
         "\\end{bmatrix}\n",
         "\\end{equation*}\n",
-        "y $x$ es un vector desconocido, $b$ un vector constante conocido.\n",
+        "\n",
+        "El vector $x$ es un vector desconocido de (n+1) dimensiones, y $b$ un vector constante conocido de (n+1) dimensiones.\n",
         "\n",
         "\\begin{equation*}\n",
         "x  =  \\begin{bmatrix} \n",
