--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjdRbWGfuHuhxvWL2npR5A",
+      "authorship_tag": "ABX9TyPzQ95jB4kfgIj6NPehnBu3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1622,9 +1622,11 @@
         "-v_{11} + v_{12} = 0 \\qquad \\mathrm{ó} \\qquad v_{11} = v_{12}\n",
         "\\end{equation*}\n",
         "\n",
-        "Entonces el eigenvector $v_1$ puede ser cualquier vector múltiplo de  \n",
+        "Entonces el eigenvector $v_1$ puede ser cualquier vector múltiplo de \n",
+        "\n",
         "\\begin{equation*}\n",
-        "v_1 = c_1 \\begin{bmatrix}\n",
+        "v_1 = c_1 \n",
+        "\\begin{bmatrix}\n",
         "1 \\\\\n",
         "1 \\\\\n",
         "\\end{bmatrix}\n",
@@ -1650,8 +1652,10 @@
         "\\end{equation*}\n",
         "\n",
         "Entonces el eigenvector $v_2$ puede ser cualquier vector múltiplo de  \n",
+        "\n",
         "\\begin{equation*}\n",
-        "v_2 = c_2  \\begin{bmatrix}\n",
+        "v_2 = c_2  \n",
+        "\\begin{bmatrix}\n",
         "1 \\\\\n",
         "- 1 \\\\\n",
         "\\end{bmatrix}\n",
