--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzQ95jB4kfgIj6NPehnBu3",
+      "authorship_tag": "ABX9TyM+vcGzXKjV8WaWVrVWWnia",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1866,7 +1866,7 @@
         "\n",
         "Si M es diagonalizable, entonces\n",
         "\\begin{equation*}\n",
-        "M^k = P D P^{-1} \\cdot P D P^{-1} \\cdot P D P^{-1} \\cdots P D P^{-1} = P D^k P\n",
+        "M^k = P D P^{-1} \\cdot P D P^{-1} \\cdot P D P^{-1} \\cdots P D P^{-1} = P D^k P^{-1}\n",
         "\\end{equation*}\n",
         "\n",
         "Veamos un ejemplo de calcular la potencia $k=25$ de $M$, $M^{25}$ y mediremos el tiempo de cálculo.\n"
