--- a/Actividad7.ipynb
+++ b/Actividad7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMAYGV39SUKqTDcM0MU8zY",
+      "authorship_tag": "ABX9TyOroY5XJrUSkglEmp5cz69x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2071,7 +2071,7 @@
         "id": "InfRh0xUyf9O"
       },
       "source": [
-        "**Ejemplo 1: Interpolación.** Supongamos que conocemos un conjunto de 3 puntos $(x_0, y_0)$, $(x_1, y_1)$ y $(x_1, y_1)$. Buscamos entonces encontrar un polinomio de orden 2 que pase por esos 3 puntos. \n",
+        "**Ejemplo 1: Interpolación.** Supongamos que conocemos un conjunto de 3 puntos $(x_0, y_0)$, $(x_1, y_1)$ y $(x_2, y_2)$. Buscamos entonces encontrar un polinomio de orden 2 que pase por esos 3 puntos. \n",
         "\n",
         "La parábola $p(x) = a_0 + a_1 x + a_2 x^2$ pasa por esos puntos si se satisfacen el siguiente sistema de ecuaciones\n",
         "\n",
@@ -2793,7 +2793,9 @@
         "Sobreponga la función $y=\\sin(x)$ y contrástela con el polinomio $p(x)$.\n",
         "\n",
         "**Ejercicio 6.** \n",
-        "Regrese a su modelo de análisis de series de tiempo. Haga una descomposición de su serie de tiempo de las temperaturas (Tmax y Tmin), y realice una regresión lineal sobre la serie de Tendencia de Temp $(T = a_0 + a_1 t)$. Encuentre si la pendiente es positiva o negativa de la tendencia (signo de $a_1$), es decir si las Temperaturas (Tmax, Tmin) están subiendo o bajando en el periodo analizado.\n"
+        "Regrese a su modelo de análisis de series de tiempo. Haga una descomposición de su serie de tiempo de las temperaturas (Tmax y Tmin), y realice una regresión lineal sobre la serie de Tendencia de Temp $(T = a_0 + a_1 t)$. Encuentre si la pendiente es positiva o negativa de la tendencia (signo de $a_1$), es decir si las Temperaturas (Tmax, Tmin) están subiendo o bajando en el periodo analizado.\n",
+        "\n",
+        "**NOTA:** Pueden trabajar en sus Notebooks de la Actividad 5 o 6 y hacer el ajuste de regresión lineal allá donde tienen todo cargado en la memoria y luego copiar unas celdas de texto de esa Notebook y agregarlas al final de su Notebook de la Actividad 7. Así no tienen que cargar a la memoria todas las operaciones. \n"
       ]
     },
     {
@@ -2806,6 +2808,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XbdGt_mxTpqO"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
