--- a/Actividad8.ipynb
+++ b/Actividad8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCYBBlqGWQmtARay9TrUZg",
+      "authorship_tag": "ABX9TyNcwEHY/VoM5RZACukN2qx7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,7 +360,8 @@
         "\\end{bmatrix}\n",
         "\\end{equation*}\n",
         "\n",
-        "La biblioteca SciPy tiene una función para integrar ecuaciones diferenciales *scipy.integrate.odeint*\n"
+        "La biblioteca SciPy tiene una función para integrar sistemas de ecuaciones diferenciales [scipy.integrate.odeint](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.odeint.html#scipy.integrate.odeint). Haremos uso de ella. \n",
+        "\n"
       ]
     },
     {
