--- a/Actividad8.ipynb
+++ b/Actividad8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Actividad8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCLTVsUYw2vRzgqLC+zzGW",
+      "authorship_tag": "ABX9TyOMY/B/TYpOr4yIJUgNenlr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,10 +48,13 @@
         "Iniciamos el tema definiendo la forma general de una [ecuación difererencial ordinaria](https://en.wikipedia.org/wiki/Ordinary_differential_equation), definida por un polinomio de una combinación de derivadas de distinto orden de una función $y(t)$\n",
         "\n",
         "\\begin{equation*} \n",
-        "a_0(t) y + a_1(t) y^{\\prime} + a_2(t) y^{\\prime\\prime} + \\cdots + a_n(t) y^{(n)} + b(t) = 0\n",
+        "a_0(t) y + a_1(t) y^{\\prime} + \n",
+        "a_2(t) y^{\\prime\\prime} + \\cdots + \n",
+        "a_n(t) y^{(n)} + b(t) = 0\n",
         "\\end{equation*}\n",
         "\n",
-        "donde $a_0(t), a_1(t), a_2 (t), \\ldots , a_n(t)$ y $b(t)$ son funciones diferenciables arbitrarias no necesariamente lineales y $y^{\\prime}, y^{\\prime\\prime}, \\ldots, y^{n}$ son las derivadas consecutivas de la función desconocida $y(t)$.\n",
+        "donde $a_0(t), a_1(t), a_2 (t), \\ldots , a_n(t)$ y $b(t)$ son funciones diferenciables arbitrarias no necesariamente lineales y \n",
+        "$y^{\\prime}, y^{\\prime\\prime}, \\ldots, y^{n}$ son las derivadas consecutivas de la función desconocida $y(t)$.\n",
         "\n",
         "No todas las ecuaciones diferenciales pueden ser resueltas de forma analítica, por lo que se recurre a buscar las soluciones de forma numérica. \n",
         "\n",
@@ -70,8 +73,11 @@
         "La ecuación diferencial\n",
         "\n",
         "\\begin{eqnarray*}\n",
-        "a_0 y(t) + a_1(t) y^{\\prime} + a_2(t) y^{\\prime \\prime} + \\cdots + a_{k-1}(t) y^{k-1} & = & y^{k} \\\\\n",
-        "F(t, y, y^{\\prime}, y^{\\prime \\prime}, \\ldots , y^{k-1}) & = & y^{k}\n",
+        "a_0 y(t) + a_1(t) y^{\\prime} + \n",
+        "a_2(t) y^{\\prime\\prime} + \\cdots + \n",
+        "a_{k-1}(t) y^{k-1} & = & y^{k} \\\\\n",
+        "F(t, y, y^{\\prime}, y^{\\prime\\prime}, \n",
+        "\\ldots , y^{k-1}) & = & y^{k}\n",
         "\\end{eqnarray*}\n",
         "\n",
         "se puede reescribir, definiendo $y_1, y_2, \\ldots, y_{k-1}$ funciones dependientes de $t$\n",
